[package]
name = "backend_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.1.0", features = ["rustls"] }
tokio = { version = "1.21.0", features = ["full"] }
elo = { git = "https://github.com/teo8192/elo", version = "0.2.0" }
structopt = { version = "0.3.26" }
sqlx = { version = "0.6.1", features = ["postgres", "runtime-tokio-rustls"] }
serde = { version = "1.0.144", features = ["derive"] }
